# MBA_COGNITIVE_ENVIROMENTS

./: .gitignore  CRIAÇÃO DO CONTAINER PARA O PROJETO.md  HUB DE DESENVOLVIMENTO.md  Makefile  OBJETIVO E PLANO DE ATAQUE.md  PLANO DE ATAQUE DETALHADO.md  README.md  USO DAS LLM´S QUE DISPONHO.md  pyproject.toml
.obsidian/: workspace.json
cofre_remoto_mba_cognitive_enviroment/: 00_configuração_aws_openai_s3.md  CAMINHO PARA O GIT DA ENTREGA.md  CANVAS.canvas.md  Container_plano_ataque.md  FECHAMENTO DOS SERVIÇOS.md  HUB DE DESENVOLVIMENTO.md  IA e LLMs - Fundamentos, AWS e OpenAI.md  Instruções para o container.md  JOB TO BE DONE.canvas  README.md  README_aws_credenciais_corrigido.md  README_container_plano_ataque.md  RELATÓRIO TÉCNICO - NOTEBOOK 1-  PROCESSAMENTO E ANÁLISE DE IMAGENS.md  RELATÓRIO TÉCNICO - NOTEBOOK 2 - VISUALIZAÇÃO E ANÁLISE AVANÇADA.md  Resultados.md  Sem título 2.md  Sem título 3.md  Sem título.md  USO DAS LLM´S QUE DISPONHO.md
cofre_remoto_mba_cognitive_enviroment/.obsidian/: app.json  workspace.json
cofre_remoto_mba_cognitive_enviroment/container-cognitive/: Dockerfile  OPEN AI - CHAVE.md  WRMELO_accessKeys.csv  docker-compose.yml  requirements.txt
cofre_remoto_mba_cognitive_enviroment/reports/: Análise Abrangente de Ambientes Cognitivos e IA & LLMs.md  EXERCICIO PARA ENTREGA.md  PROPOSIÇÃO PARA SOLUÇÃO.md
docs/: mkdocs.yml
docs/docs/: index.md
mba_cognitive_enviroments/: __init__.py  dataset.py  features.py  plots.py
reports/: Análise Abrangente de Ambientes Cognitivos e IA & LLMs.md  EXERCICIO PARA ENTREGA.md
(+27 files in other folders)
