[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mba_cognitive_enviroments"
version = "0.0.1"
description = "CADEIRA DO MBA FIAP"
authors = [
  { name = "WRM" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.3"


[tool.ruff]
line-length = 99
src = ["mba_cognitive_enviroments"]
include = ["pyproject.toml", "mba_cognitive_enviroments/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mba_cognitive_enviroments"]
force-sort-within-sections = true

